# JobLens

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README_EN.md  README_zh.md
.github/workflows/: ci.yml  integration-test.yml  release.yml
config/: config.example.yaml
doc/: api_documentation.md  api_documentation_zh.md  configuration.md  configuration_zh.md  develop_guide.md  develop_guide_zh.md  joblens_simplest_deployable_suite.md  joblens_simplest_deployable_suite_zh.md  power_solution_comparison_zh.md
include/collector/: basic_info_collector.hpp  collector_template  collector_utils.hpp  cpumem_collector.hpp  filemon_bpf_collector.hpp  gpu_usage_collector.hpp  ibpf_collector.hpp  icollector.h  io_usage_collector.hpp  net_usage_collector.hpp  power_collector.hpp  proc_collector_func.hpp  taskstats_collector.hpp
include/common/: common_job.hpp  condor_job.hpp  config.hpp  directory_watcher.hpp  ebpf_common.hpp  local_rpc.hpp  main_utils.hpp  netlink_utils.hpp  perf_counter.hpp  permission_opt.hpp  print_fmt.hpp  slurm_job.hpp  spin_lock.hpp  streamer_watcher.hpp  struct2ltable.hpp  timer_scheduler.hpp  utils.hpp  version.h.in
include/core/: cgroup_mkdir_event_source.hpp  collector_manager_utils.hpp  collector_registry.hpp  collector_runtime.hpp  collector_scheduler.hpp  collector_type.h  event_collector_manager.hpp  job_lifecycle_event.h  job_registry.hpp  periodic_collector_manager.hpp  writer_manager.hpp
include/ebpf/: bpf_types.h  job_fd_basic.h  job_fd_rw_stat.h  power_collect.h  trace_cgroup_mkdir.h  trace_condor_starter.h  trace_execve_job.h  trace_sched_runtime.h  trace_slurm_stepd.h  vmlinux.h
include/job_watcher/: cgroup_mkdir_event_source.hpp  condor_job_watcher.hpp  execve_event_source.hpp  job_trigger_event.hpp  job_trigger_source.hpp  slurm_job_watcher.hpp
include/rule_engine/: rule_engine.hpp  rules_manager.hpp
include/writer/: base_writer.hpp  es_writer.hpp  file_writer.hpp  kafka_writer.hpp  prometheus_exporter_writer.hpp
packaging/: joblens-dev.spec  joblens-trigger-dev.spec  joblens-trigger.spec  joblens.spec
power_collect/: config.ini  grafana_power_dashboard.json  power_bench.sh
scripts/: auto_add_job.py  build-rpm.sh  build-trigger-rpm.sh  build-unified-rpm.sh  check-version-consistency.sh  collect_libs.sh  install-deps.cmake  install-deps.sh  install-integration-deps.sh  joblens-simple-viz.py  joblens_cli.py  verify-unified-rpm.sh
scripts/cmake/: Packaging.cmake
scripts/init/: joblens.service.in
scripts/rpm/: joblens-unified.spec  postinstall.sh  postuninstall.sh  preinstall.sh  preuninstall.sh
src/: main.cpp
src/collector/: basic_info_collector.cpp  collector_template  cpumem_collector.cpp  filemon_bpf_collector.cpp  gpu_usage_collector.cpp  io_usage_collector.cpp  net_usage_collector.cpp  power_collector.cpp  proc_collector_func.cpp  taskstats_collector.cpp
src/common/: config.cpp  directory_watcher.cpp  ebpf_common.cpp  local_rpc.cpp  main_utils.cpp  netlink_utils.cpp  streamer_watcher.cpp  timer_scheduler.cpp
src/core/: cgroup_mkdir_event_source.cpp  collector_manager_utils.cpp  collector_registry.cpp  collector_scheduler.cpp  event_collector_manager.cpp  job_registry.cpp  periodic_collector_manager.cpp  writer_manager.cpp
src/ebpf/: job_fd_basic.bpf.c  job_fd_rw_stat.bpf.c  power_collect.bpf.c  trace_cgroup_mkdir.bpf.c  trace_condor_starter.bpf.c  trace_execve_job.bpf.c  trace_sched_runtime.bpf.c  trace_slurm_stepd.bpf.c
src/job_watcher/: cgroup_mkdir_event_source.cpp  execve_event_source.cpp
src/rule_engine/: rule_engine.cpp  rule_manager.cpp
src/writer/: base_writer.cpp  es_writer.cpp  file_writer.cpp  kafka_writer.cpp  prometheus_exporter_writer.cpp
tests/integration/: .gitignore  Makefile  README.md  Vagrantfile  quick_smoke.sh  requirements.txt  run_all.sh  run_preset.py  run_preset.sh  test_02_htcondor_discovery.py  test_06_performance_baseline.py  utils.py
tests/integration/presets/: alm9-default.yaml  alm9-manual-trigger.yaml  alm9-rule-engine.yaml  schema.md
tests/integration/presets/configs/: filewriter_append_shared.yaml  filewriter_fallback.yaml  filewriter_overwrite.yaml  filewriter_routing.yaml  joblens_core_default.yaml  joblens_core_execve.yaml  joblens_core_manual_trigger.yaml  joblens_core_rule_engine.yaml  joblens_filewriter_rotation.yaml  joblens_filewriter_shutdown.yaml  joblens_trigger_default.yaml
tests/integration/provisioning/: common.sh
tests/integration/provisioning/condor/: controller.sh  worker.sh
tests/integration/provisioning/joblens/: deploy.sh
tests/integration/provisioning/slurm/: controller.sh  worker.sh
tests/integration/test_cases/: conftest.py  test_01_health.py  test_02_htcondor_discovery.py  test_03_slurm_discovery.py  test_04_filewriter_schema.py  test_05_trigger_api.py  test_06_performance_baseline.py  test_07_manual_trigger_tracking.py  test_08_rule_engine_template.py  test_09_filewriter_config_conflicts.py  test_10_filewriter_routing_modes.py  test_11_filewriter_rotation_shutdown.py  utils.py
tests/integration/test_jobs/: helloworld.condor  helloworld.sbatch  sleep.condor  sleep.sbatch
trigger/: README.md  __init__.py  app.py  app_factory.py  config.example.yaml  deploy_trigger.sh  entrypoint.py  gunicorn.conf.py  joblens-trigger.service  joblens-trigger.spec  pyproject.toml  regustry_api_doc.md  requirements.txt  setup.py  version.py
trigger/api/: __init__.py  routes.py  schemas.py
trigger/core/: __init__.py  config_manager.py  etcd_client.py  new_config_manager.py  rpc_client.py  rule_manager.py  service_registrar.py  tools.py
trigger/utils/: __init__.py  cluster_info.py  email_notifier.py  hardware_info.py
