[build-system]
requires = ["setuptools>=53"]
build-backend = "setuptools.build_meta"

[project]
name = "joblens-trigger"
description = "JobLens Trigger Service - RESTful API gateway for JobLens"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask>=3",
    "gunicorn",
    "psutil>=5",
    "pydantic>=2",
    "PyYAML>=6",
    "Requests>=2",
    "setuptools>=53",
    "watchdog>=4",
    "grpcio>=1.80",
    "protobuf<=3.20",
]
authors = [
    {name = "JobLens Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]

[tool.setuptools.package-dir]
"trigger" = "."

[tool.setuptools]
packages = ["trigger", "trigger.api", "trigger.core", "trigger.utils"]
